<resources>
    <string name="app_name">Taler Cashier</string>

    <string name="config_bank_url">Bank API address</string>
    <string name="config_username">Username</string>
    <string name="config_password">Password</string>
    <string name="config_button_save">Save</string>
    <string name="config_bank_url_error">The address is invalid.</string>
    <string name="config_username_error">Please enter your username!</string>
    <string name="config_error">Error retrieving configuration</string>
    <string name="config_error_auth">Invalid username or password!</string>
    <string name="config_error_offline" translatable="false">@string/balance_offline</string>
    <string name="config_demo_hint">For testing, you can <![CDATA[<a href="%s">create a test account at the demo bank</a>]]>.</string>

    <string name="balance_current_label">Current balance</string>
    <string name="balance_error">ERROR: %s</string>
    <string name="balance_offline">Offline. Please connect to the Internet.</string>

    <string name="ok">OK</string>

    <string name="action_reconfigure">Reconfigure</string>
    <string name="action_lock">Lock</string>
    <string name="action_about">About</string>

    <string name="withdraw_input_amount">Amount</string>
    <string name="withdraw_into">How much e-cash should be withdrawn?</string>
    <string name="withdraw_error_zero">Enter positive amount!</string>
    <string name="withdraw_error_insufficient_balance">Insufficient balance</string>
    <string name="withdraw_error_currency_mismatch">Error: Bank reported a different currency</string>
    <string name="withdraw_error_fetch">Error communicating with bank: %s</string>
    <string name="withdraw_error_timeout">No wallet tried to withdraw. Please try again.</string>
    <string name="withdraw_error_offline" translatable="false">@string/balance_offline</string>
    <string name="withdraw_button_confirm">Withdraw</string>

    <!-- "to withdraw" refers to the amount that will be withdrawn, e.g. to withdraw 12 EUR -->
    <string name="transaction_intro">Scan code with the Taler wallet app to withdraw:</string>
    <!-- "to withdraw" refers to the amount that will be withdrawn, e.g. to withdraw 12 EUR -->
    <string name="transaction_intro_nfc">Scan code or use NFC with the Taler wallet app to withdraw:</string>
    <string name="transaction_intro_scanned">Please confirm the transaction!</string>
    <string name="transaction_confirm">Confirm</string>
    <string name="transaction_abort">Abort</string>
    <string name="transaction_aborted">Transaction aborted</string>
    <string name="transaction_button_back">Go back</string>
    <string name="transaction_last_success">Last Transaction: %s withdrawn</string>
    <string name="transaction_last_aborted">Last Transaction: Aborted</string>
    <string name="transaction_last_error">Last Transaction: Failed</string>

    <string name="about_title">GNU Taler Cashier</string>
    <string name="about_version">Version: %s</string>
    <string name="about_license">License: %s</string>
    <string name="about_license_content" translatable="false">GPL-3.0-or-later</string>
    <string name="about_copyright">Copyright: %s</string>
    <string name="about_copyright_holder" translatable="false">Taler Systems S.A.</string>
    <string name="about_supported_bank_api">Bank API Version: %s</string>

</resources>
